--- a/.github/workflows/PT.yaml
+++ b/.github/workflows/PT.yaml
@@ -1,1 +1,41 @@
+name: PT workflow
+on: 
+  repository_dispatch:
+    types: [trigger_PT_workflow]
+  workflow_dispatch:
+    inputs:
+      Component1:
+        type: boolean
+        description: a2000-legacy-app-1
+        default: false
 
+      Component2:
+        type: boolean
+        description: a2000-legacy-app-2
+        default: false
+jobs:
+  PT:
+    runs-on: ubuntu-latest
+    steps:
+     
+    - name: check input parameter
+      run: |
+        echo "component one" ${{ github.event.inputs.a2000-legacy-app-1 }} 
+        echo " component two "${{ github.event.inputs.a2000-legacy-app-2 }}
+        echo " component one: ${{ github.event.client_payload.a2000-legacy-app-1 }}
+        echo " component Two: ${{ github.event.client_payload.a2000-legacy-app-2 }}
+  a2000-legacy-app-1:
+     if: ${{ github.event.inputs.a2000-legacy-app-1 == 'true'}} || ${{ github.event.client_payload.Component1 == 'true' }}
+     uses: ./.github/workflows/a2000-legacy-app-1.yml
+     with: 
+      environment : "qa"
+      testtype: "FT"
+      jobname: "job1"
+
+  a2000-legacy-app-2:
+     if: ${{ github.event.inputs.a2000-legacy-app-2 == 'true'}} || ${{ github.event.client_payload.a2000-legacy-app-2 == 'true' }}
+     uses: ./.github/workflows/a2000-legacy-app-2.yml
+     with: 
+      environment : "qa"
+      testtype: "FT"
+      jobname: "job1"
