--- a/.github/workflows/a2000-legacy-app-1.yaml
+++ b/.github/workflows/a2000-legacy-app-1.yaml
@@ -11,8 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-          component1: [a2000-legacy-app-1]
-          folder: [DeterAPI1]
+          folder: [a2000-legacy-app-1/DeterAPI1]
     
     steps:
       # checkout repository
@@ -34,12 +33,12 @@ jobs:
 
       - name: Run Script
         run: |
-          echo "Processing folder: ${{matrix.component1}}/{{ matrix.folder }}"
-          if [ -f "${{matrix.component1}}/{{ matrix.folder }}/script1.sh" ]; then
-            bash "${{matrix.component11}}/{{ matrix.folder }}/script1.sh"
-            bash "${{matrix.component}}/{{ matrix.folder }}/script2.sh"
+          echo "Processing folder: ${{ matrix.folder }}"
+          if [ -f "${{ matrix.folder }}/script1.sh" ]; then
+            bash "${{ matrix.folder }}/script1.sh"
+            bash "${{ matrix.folder }}/script2.sh"
           else
-            echo "No script found in ${{matrix.component1}}/{{ matrix.folder }}"
+            echo "No script found in ${{ matrix.folder }}"
           fi
   job2-ui:
     needs: job1-api
