--- a/.github/workflows/a2000-legacy-app-2.yaml
+++ b/.github/workflows/a2000-legacy-app-2.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-          folder: [DeterAPI1]
+          folder: [a2000-legacy-app-2/folder1]
     
     steps:
       # checkout repository
@@ -44,7 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        folder: [DeterUI]
+        folder: [a2000-legacy-app-2/folder2]
     
     steps:
       # checkout repository
@@ -65,7 +65,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        folder: [DeterAPI2]
+        folder: [a2000-legacy-app-2/folder2]
     
     steps:
       # checkout repository
