--- a/.github/workflows/PT.yaml
+++ b/.github/workflows/PT.yaml
@@ -13,29 +13,28 @@ on:
         type: boolean
         description: a2000-legacy-app-2
         default: false
+
 jobs:
   PT:
     runs-on: ubuntu-latest
     steps:
-     
-    - name: check input parameter
-      run: |
-        echo "component one" ${{ github.event.inputs.a2000-legacy-app-1 }} 
-        echo " component two "${{ github.event.inputs.a2000-legacy-app-2 }}
-        echo " component one: ${{ github.event.client_payload.a2000-legacy-app-1 }}
-        echo " component Two: ${{ github.event.client_payload.a2000-legacy-app-2 }}
+      - name: Check input parameter
+        run: |
+          echo "component one: ${{ github.event.inputs.a2000-legacy-app-1 }}" 
+          echo "component two: ${{ github.event.inputs.a2000-legacy-app-2 }}"
+          echo "component one: ${{ github.event.client_payload.a2000-legacy-app-1 }}"
+          echo "component two: ${{ github.event.client_payload.a2000-legacy-app-2 }}"
+
   a2000-legacy-app-1:
-     if: ${{ github.event.inputs.a2000-legacy-app-1 == 'true'}} || ${{ github.event.client_payload.Component1 == 'true' }}
-     uses: ./.github/workflows/a2000-legacy-app-1.yml
-     with: 
-      environment : "qa"
+    if: ${{ github.event.inputs.a2000-legacy-app-1 == 'true' }} || ${{ github.event.client_payload.a2000-legacy-app-1 == 'true' }}
+    uses: ./.github/workflows/a2000-legacy-app-1.yml
+    with: 
+      environment: "qa"
       testtype: "PT"
-    #  jobname: "job1"
 
   a2000-legacy-app-2:
-     if: ${{ github.event.inputs.a2000-legacy-app-2 == 'true'}} || ${{ github.event.client_payload.a2000-legacy-app-2 == 'true' }}
-     uses: ./.github/workflows/a2000-legacy-app-2.yml
-     with: 
-      environment : "qa"
+    if: ${{ github.event.inputs.a2000-legacy-app-2 == 'true' }} || ${{ github.event.client_payload.a2000-legacy-app-2 == 'true' }}
+    uses: ./.github/workflows/a2000-legacy-app-2.yml
+    with: 
+      environment: "qa"
       testtype: "PT"
-     # jobname: "job1"
