--- a/.github/workflows/PT-Test.yaml
+++ b/.github/workflows/PT-Test.yaml
@@ -21,6 +21,7 @@ jobs:
         working-directory: a2000-legacy-app-1/DeterAPI1
         run: |
           # Replace with your script command
+      - name: Run your script
           ./script1.sh
           ./script2.sh
 
