--- a/.github/workflows/PT-Test.yaml
+++ b/.github/workflows/PT-Test.yaml
@@ -39,30 +39,30 @@ jobs:
           # Replace with your script command
           ./script1.sh
 
-  # Second Component - a2000-legacy-app-2
-  a2000-legacy-app-2-folder1:
-    name: a2000-legacy-app-2 - folder-1
-    runs-on: windows-latest # Different runner
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # # Second Component - a2000-legacy-app-2
+  # a2000-legacy-app-2-folder1:
+  #   name: a2000-legacy-app-2 - folder-1
+  #   runs-on: windows-latest # Different runner
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Run folder-1 Script (a2000-legacy-app-2)
-        working-directory: a2000-legacy-app-2/folder-1
-        run: |
-          # Replace with your script command
-          ./script10.sh # Example for PowerShell script
+  #     - name: Run folder-1 Script (a2000-legacy-app-2)
+  #       working-directory: a2000-legacy-app-2/folder-1
+  #       run: |
+  #         # Replace with your script command
+  #         ./script10.sh # Example for PowerShell script
 
-  a2000-legacy-app-2-folder-2:
-    name: a2000-legacy-app-2 - folder-2
-    needs: a2000-legacy-app-2-folder1 # Ensure sequential execution
-    runs-on: windows-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  # a2000-legacy-app-2-folder-2:
+  #   name: a2000-legacy-app-2 - folder-2
+  #   needs: a2000-legacy-app-2-folder1 # Ensure sequential execution
+  #   runs-on: windows-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      - name: Run Folder 2 Script (a2000-legacy-app-2)
-        working-directory: a2000-legacy-app-2/folder-2
-        run: |
-          # Replace with your script command
-          ./script11.sh
+  #     - name: Run Folder 2 Script (a2000-legacy-app-2)
+  #       working-directory: a2000-legacy-app-2/folder-2
+  #       run: |
+  #         # Replace with your script command
+  #         ./script11.sh
