--- a/.github/workflows/PT.yaml
+++ b/.github/workflows/PT.yaml
@@ -3,9 +3,9 @@ on:
 
   workflow_dispatch:
 jobs:
-  a2000-dete-app:
+  a2000-dete-app1:
     if: ${{ github.event.inputs.a2000-dete-app1 == 'true'}}
-    uses: ./.github/workflows/a2000-dete-app.yml
+    uses: ./.github/workflows/a2000-dete-app1.yml
     with: 
         JmeterAPIscript1 : "DeterAPI/script1.sh"
         
